--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,17 @@
-/*styles here*/
+.main-container {
+  background-image: url("../resources/faktura.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 700px;
+}
+
+.menu-button {
+  height: 100px;
+  padding-top: 40px;
+  color: red;
+}
+
+.menu-button:hover {
+  color: white;
+  background-color: black;
+}
