--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 .main-container {
-  background-image: url("../resources/faktura.jpg");
+  background-image: url("../resources/faktura2.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 700px;
@@ -8,10 +8,44 @@
 .menu-button {
   height: 100px;
   padding-top: 40px;
-  color: red;
+  text-align: center;
+  color: gray;
+  font-size: 25px;
 }
 
 .menu-button:hover {
   color: white;
   background-color: black;
+}
+
+.logo {
+  font-size: 70px;
+}
+
+.main-info {
+  position: relative;
+  top: 40%;
+  left: 15%;
+  color: white;
+  font-size: 50px;
+}
+
+.main-buttons{
+  position: relative;
+  top: 45%;
+  left: 50%;
+}
+
+.main-button {
+  border: solid white 3px;
+  background-color: inherit;
+  color: white;
+  font-size: 20px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.main-button:hover{
+  color: black;
+  background-color: white;
 }
